--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,18 @@ select.dynamic-element,
     padding-right: 0.625rem;
     cursor: pointer;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    vertical-align: middle;
+}
+
+/* Ensure dropdown options are vertically centered */
+select.dynamic-element option,
+.template-select option {
+    padding: 0.5rem 0.625rem;
+    line-height: 1.5;
+    min-height: 2rem;
+    display: flex;
+    align-items: center;
 }
 
 select.dynamic-element:focus,
